fixes project page text gets covered issue

--- a/src/app/components/content-box/project-page/project-page.component.css
+++ b/src/app/components/content-box/project-page/project-page.component.css
@@ -47,7 +47,7 @@
 #contentBar {
   width: 100%;
   max-width: 100%;
-
+  z-index: 2;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1vh;
